--- a/12 - Key Sequence Detection/index-START.html
+++ b/12 - Key Sequence Detection/index-START.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Key Detection</title>
   <script type="text/javascript" src="http://www.cornify.com/js/cornify.js"></script>
 </head>
+
 <body>
-<script>
-</script>
+  <script>
+    const pressed = [];
+    const secredCode = 'meli';
+
+    window.addEventListener('keyup', (e) => {
+      console.log(e.key);
+      pressed.push(e.key);
+      pressed.splice(-secredCode.length - 1, pressed.length - secredCode.length);
+      if (pressed.join('').includes(secredCode)) {
+        console.log('DING DING!');
+        cornify_add();
+      }
+      console.log(pressed);
+    });
+  </script>
 </body>
+
 </html>
